PWA-ready index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -69,14 +69,15 @@
 
   <div class="planner-stack">
     <div class="planner-preview" id="plannerPreview">
-      <p class="planner-empty">No workout planned for today</p>
-    </div>
+  <p class="planner-empty">No workout planned for today</p>
+</div>
+
 
     <button
       class="planner-link"
       onclick="location.href='planner.html'"
     >
-      Show more →
+      Show more 
     </button>
   </div>
 
