--- a/public/planner.html
+++ b/public/planner.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <div class="planner-preview" id="plannerPreview">
+  <p class="planner-empty">No workout planned for today</p>
+</div>
+
   <meta name="theme-color" content="#111827">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="UTF-8" />
