--- a/public/planner.html
+++ b/public/planner.html
@@ -2,258 +2,294 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Planner</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Status bar / PWA -->
   <meta name="theme-color" content="#111827">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <link rel="stylesheet" href="style.css" />
 
   <style>
-    body { font-size: 16px; }
+    /* ===== TOP NAV ===== */
+    .top-nav {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      background: #111827;
+      border-bottom: 1px solid #1f2937;
+      padding: 1rem;
+      font-weight: 600;
+      color: #38bdf8;
+      font-size: 1.2rem;
+      text-align: center;
+    }
+
+    .page {
+      padding: 1rem;
+      min-height: 100vh;
+      padding-bottom: 140px; /* bottom nav space */
+    }
+
+    .container {
+      max-width: 480px;
+      margin: 0 auto;
+    }
+
+    /* ===== CARDS ===== */
+    .card {
+      background: #111827;
+      border-radius: 14px;
+      padding: 1.25rem;
+      margin-bottom: 1rem;
+      border: 1px solid #1f2937;
+    }
+
+    /* ===== BUTTONS ===== */
+    button {
+      width: 100%;
+      padding: 0.75rem;
+      border-radius: 10px;
+      border: none;
+      background: #38bdf8;
+      color: #020617;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 0.5rem;
+    }
+
+    button.secondary {
+      background: #1f2937;
+      color: #e5e7eb;
+    }
+
+    button.remove-btn {
+      background: #ef4444;
+      color: #fff;
+      font-weight: 500;
+      font-size: 0.85rem;
+      padding: 0.5rem;
+      border-radius: 8px;
+      width: auto;
+      margin-left: 0.5rem;
+      cursor: pointer;
+    }
+
+    /* ===== FORM INPUTS ===== */
+    input, select {
+      width: 100%;
+      padding: 0.75rem;
+      border-radius: 10px;
+      border: 1px solid #1f2937;
+      background: #020617;
+      color: #e5e7eb;
+      font-size: 16px;
+      margin-bottom: 0.75rem;
+    }
+
+    /* ===== WORKOUT LIST ===== */
+    .workout-item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: #111827;
+      border: 1px solid #1f2937;
+      border-radius: 12px;
+      padding: 0.75rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .workout-item span {
+      font-weight: 500;
+      color: #e5e7eb;
+    }
+
+    /* ===== CALENDAR ===== */
+    .calendar {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      gap: 4px;
+      margin-top: 1rem;
+    }
+
+    .calendar-day {
+      background: #020617;
+      border: 1px solid #1f2937;
+      border-radius: 8px;
+      height: 60px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: 0.8rem;
+      color: #9ca3af;
+      cursor: default;
+    }
+
+    .calendar-day.has-workout {
+      background: #1f2937;
+      color: #38bdf8;
+      font-weight: 600;
+    }
 
     .planner-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 0.75rem;
-    }
-
-    .planner-list {
-      display: flex;
-      flex-direction: column;
-      gap: 0.6rem;
       margin-bottom: 1rem;
     }
 
-    .planner-item {
-      background: #020617;
-      border: 1px solid #1f2937;
-      border-radius: 10px;
-      padding: 0.7rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .planner-header h3 {
+      margin: 0;
+      color: #e5e7eb;
     }
 
-    .planner-empty {
-      text-align: center;
-      color: #9ca3af;
-      padding: 1rem 0;
-    }
-
-    /* ===== MODAL ===== */
-
-    .modal-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.6);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 50;
-    }
-
-    .modal {
-      background: #020617;
-      border: 1px solid #1f2937;
-      border-radius: 14px;
-      padding: 1rem;
-      width: 90%;
-      max-width: 360px;
-    }
-
-    .modal h3 {
-      margin-bottom: 0.75rem;
-    }
-
-    .modal label {
-      font-size: 0.8rem;
-      color: #9ca3af;
-      margin-top: 0.6rem;
-      display: block;
-    }
-
-    .modal input {
-      width: 100%;
-      margin-top: 0.25rem;
-    }
-
-    .modal-actions {
-      display: flex;
-      gap: 0.5rem;
-      margin-top: 1rem;
-    }
-
-    /* ===== CALENDAR ===== */
-
-    .calendar {
-      margin-top: 1rem;
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      gap: 0.35rem;
-    }
-
-    .calendar-day {
-      aspect-ratio: 1;
-      border-radius: 8px;
-      border: 1px solid #1f2937;
-      background: #020617;
-      font-size: 0.75rem;
-      padding: 0.25rem;
-      position: relative;
-    }
-
-    .calendar-day.has-workout {
-      border-color: #38bdf8;
-    }
-
-    .calendar-day span {
-      position: absolute;
-      bottom: 4px;
-      right: 4px;
-      font-size: 0.6rem;
-      color: #38bdf8;
+    .planner-link {
+      background: #38bdf8;
+      color: #020617;
+      font-size: 0.85rem;
+      padding: 0.5rem 0.75rem;
     }
   </style>
 </head>
 
 <body>
 
-<div class="top-nav">Planner</div>
+  <!-- TOP NAV -->
+  <div class="top-nav">Ascend</div>
 
-<div class="page">
-  <div class="container">
-    <div class="card">
+  <div class="page">
+    <div class="container">
 
-      <div class="planner-header">
-        <h2>This Month</h2>
-        <button id="openModal">Add Workout</button>
+      <!-- ADD WORKOUT CARD -->
+      <div class="card">
+        <h3>Add Workout</h3>
+        <input type="text" id="plannerWorkoutName" placeholder="Workout Name" />
+        <input type="date" id="plannerWorkoutDate" />
+        <button id="addPlannerWorkoutBtn">Add Workout</button>
       </div>
 
-      <div id="plannerList" class="planner-list"></div>
+      <!-- WORKOUTS LIST -->
+      <div class="card">
+        <div class="planner-header">
+          <h3>Scheduled Workouts</h3>
+        </div>
+        <div id="workoutList">
+          <p class="planner-empty">No workouts planned for this month</p>
+        </div>
+      </div>
 
-      <div id="calendar" class="calendar"></div>
+      <!-- CALENDAR -->
+      <div class="card">
+        <h3>Calendar</h3>
+        <div class="calendar" id="calendar"></div>
+      </div>
 
     </div>
   </div>
-</div>
 
-<!-- MODAL -->
-<div class="modal-overlay" id="modal">
-  <div class="modal">
-    <h3>Schedule Workout</h3>
+  <!-- BOTTOM NAV -->
+  <nav class="bottom-nav">
+    <button data-page="dashboard" onclick="location.href='dashboard.html'">
+      <span class="icon"><img src="/icons/home.png" class="nav-icon"></span>
+      <span class="label">Home</span>
+    </button>
+    <button data-page="view" onclick="location.href='view.html'">
+      <span class="icon"><img src="/icons/workout.png" class="nav-icon"></span>
+      <span class="label">Workouts</span>
+    </button>
+    <button data-page="workout" class="create-btn" onclick="location.href='workout.html'">
+      <span class="icon">＋</span>
+    </button>
+    <button data-page="stats" disabled>
+      <span class="icon"><img src="/icons/analytics.png" class="nav-icon"></span>
+      <span class="label">Analytics</span>
+    </button>
+    <button data-page="profile" disabled>
+      <span class="icon"><img src="/icons/profile.png" class="nav-icon"></span>
+      <span class="label">Profile</span>
+    </button>
+  </nav>
 
-    <label>Workout name</label>
-    <input type="text" id="workoutName" placeholder="Leg Day">
+  <script>
+    // ===== Planner Data =====
+    const workoutListEl = document.getElementById('workoutList');
+    const calendarEl = document.getElementById('calendar');
 
-    <label>Date</label>
-    <input type="date" id="workoutDate">
+    let plannerData = JSON.parse(localStorage.getItem('planner')) || {};
 
-    <div class="modal-actions">
-      <button id="saveWorkout">Save</button>
-      <button class="secondary" id="closeModal">Cancel</button>
-    </div>
-  </div>
-</div>
-
-<script>
-  const planner = JSON.parse(localStorage.getItem("planner") || "{}");
-
-  const plannerList = document.getElementById("plannerList");
-  const calendar = document.getElementById("calendar");
-
-  const modal = document.getElementById("modal");
-  const workoutName = document.getElementById("workoutName");
-  const workoutDate = document.getElementById("workoutDate");
-
-  const today = new Date();
-  workoutDate.value = today.toISOString().split("T")[0];
-
-  function renderList() {
-    plannerList.innerHTML = "";
-
-    const todayKey = workoutDate.value;
-    const items = planner[todayKey];
-
-    if (!items || items.length === 0) {
-      plannerList.innerHTML =
-        `<div class="planner-empty">No workout planned for this day</div>`;
-      return;
-    }
-
-    items.forEach((w, i) => {
-      const div = document.createElement("div");
-      div.className = "planner-item";
-      div.innerHTML = `
-        <span>${w}</span>
-        <button class="danger">Remove</button>
-      `;
-      div.querySelector("button").onclick = () => {
-        planner[todayKey].splice(i, 1);
-        localStorage.setItem("planner", JSON.stringify(planner));
-        renderAll();
-      };
-      plannerList.appendChild(div);
-    });
-  }
-
-  function renderCalendar() {
-    calendar.innerHTML = "";
-
-    const year = today.getFullYear();
-    const month = today.getMonth();
-    const daysInMonth = new Date(year, month + 1, 0).getDate();
-
-    for (let d = 1; d <= daysInMonth; d++) {
-      const dateKey = `${year}-${String(month + 1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
-      const day = document.createElement("div");
-      day.className = "calendar-day";
-      day.textContent = d;
-
-      if (planner[dateKey]) {
-        day.classList.add("has-workout");
-        day.innerHTML += `<span>${planner[dateKey].length}</span>`;
+    function renderWorkouts() {
+      workoutListEl.innerHTML = '';
+      const workouts = Object.entries(plannerData).sort((a,b) => new Date(a[0]) - new Date(b[0]));
+      if(workouts.length === 0){
+        workoutListEl.innerHTML = `<p class="planner-empty">No workouts planned for this month</p>`;
+        return;
       }
+      workouts.forEach(([date, workout]) => {
+        const div = document.createElement('div');
+        div.className = 'workout-item';
+        div.innerHTML = `<span>${workout.name}</span>
+                         <button class="remove-btn" data-date="${date}">Remove</button>`;
+        workoutListEl.appendChild(div);
+      });
 
-      day.onclick = () => {
-        workoutDate.value = dateKey;
-        renderList();
-      };
-
-      calendar.appendChild(day);
+      // remove button
+      document.querySelectorAll('.remove-btn').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const date = btn.dataset.date;
+          delete plannerData[date];
+          localStorage.setItem('planner', JSON.stringify(plannerData));
+          renderWorkouts();
+          renderCalendar();
+        });
+      });
     }
-  }
 
-  function renderAll() {
-    renderList();
+    function renderCalendar() {
+      const today = new Date();
+      const year = today.getFullYear();
+      const month = today.getMonth();
+
+      calendarEl.innerHTML = '';
+
+      const firstDay = new Date(year, month, 1);
+      const lastDay = new Date(year, month + 1, 0);
+      for(let i=1;i<=lastDay.getDate();i++){
+        const dayDate = new Date(year, month, i).toISOString().split('T')[0];
+        const div = document.createElement('div');
+        div.className = 'calendar-day';
+        div.textContent = i;
+        if(plannerData[dayDate]){
+          div.classList.add('has-workout');
+          div.title = plannerData[dayDate].name;
+        }
+        calendarEl.appendChild(div);
+      }
+    }
+
+    // ===== ADD WORKOUT =====
+    document.getElementById('addPlannerWorkoutBtn').addEventListener('click', () => {
+      const nameInput = document.getElementById('plannerWorkoutName');
+      const dateInput = document.getElementById('plannerWorkoutDate');
+
+      if(!nameInput.value || !dateInput.value) return alert('Enter name and date');
+
+      plannerData[dateInput.value] = { name: nameInput.value };
+      localStorage.setItem('planner', JSON.stringify(plannerData));
+
+      nameInput.value = '';
+      dateInput.value = '';
+
+      renderWorkouts();
+      renderCalendar();
+    });
+
+    // Initial render
+    renderWorkouts();
     renderCalendar();
-  }
-
-  document.getElementById("openModal").onclick = () => {
-    modal.style.display = "flex";
-  };
-
-  document.getElementById("closeModal").onclick = () => {
-    modal.style.display = "none";
-  };
-
-  document.getElementById("saveWorkout").onclick = () => {
-    if (!workoutName.value) return;
-
-    const date = workoutDate.value;
-    planner[date] = planner[date] || [];
-    planner[date].push(workoutName.value);
-
-    localStorage.setItem("planner", JSON.stringify(planner));
-
-    workoutName.value = "";
-    modal.style.display = "none";
-    renderAll();
-  };
-
-  renderAll();
-</script>
+  </script>
 
 </body>
 </html>
