--- a/public/planner.html
+++ b/public/planner.html
@@ -1,295 +1,305 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Planner</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Planner</title>
+<meta name="theme-color" content="#111827">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-capable" content="yes">
 
-  <!-- Status bar / PWA -->
-  <meta name="theme-color" content="#111827">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="stylesheet" href="style.css">
 
-  <link rel="stylesheet" href="style.css" />
+<style>
+/* ===== TOP NAV ===== */
+.top-nav {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: #111827;
+  border-bottom: 1px solid #1f2937;
+  padding: 1rem;
+  font-weight: 600;
+  color: #38bdf8;
+  font-size: 1.2rem;
+  text-align: center;
+}
 
-  <style>
-    /* ===== TOP NAV ===== */
-    .top-nav {
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      background: #111827;
-      border-bottom: 1px solid #1f2937;
-      padding: 1rem;
-      font-weight: 600;
-      color: #38bdf8;
-      font-size: 1.2rem;
-      text-align: center;
-    }
+/* ===== PAGE CONTAINER ===== */
+.page {
+  padding: 1rem;
+  min-height: 100vh;
+  padding-bottom: 140px;
+}
 
-    .page {
-      padding: 1rem;
-      min-height: 100vh;
-      padding-bottom: 140px; /* bottom nav space */
-    }
+.container {
+  max-width: 480px;
+  margin: 0 auto;
+}
 
-    .container {
-      max-width: 480px;
-      margin: 0 auto;
-    }
+/* ===== CARDS ===== */
+.card {
+  background: #111827;
+  border-radius: 14px;
+  padding: 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid #1f2937;
+}
 
-    /* ===== CARDS ===== */
-    .card {
-      background: #111827;
-      border-radius: 14px;
-      padding: 1.25rem;
-      margin-bottom: 1rem;
-      border: 1px solid #1f2937;
-    }
+/* ===== BUTTONS ===== */
+button {
+  width: 100%;
+  padding: 0.75rem;
+  border-radius: 10px;
+  border: none;
+  background: #38bdf8;
+  color: #020617;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 0.5rem;
+}
 
-    /* ===== BUTTONS ===== */
-    button {
-      width: 100%;
-      padding: 0.75rem;
-      border-radius: 10px;
-      border: none;
-      background: #38bdf8;
-      color: #020617;
-      font-weight: 600;
-      cursor: pointer;
-      margin-top: 0.5rem;
-    }
+button.secondary {
+  background: #1f2937;
+  color: #e5e7eb;
+}
 
-    button.secondary {
-      background: #1f2937;
-      color: #e5e7eb;
-    }
+/* ===== FORM INPUTS ===== */
+input, select {
+  width: 100%;
+  padding: 0.75rem;
+  border-radius: 10px;
+  border: 1px solid #1f2937;
+  background: #020617;
+  color: #e5e7eb;
+  font-size: 16px;
+  margin-bottom: 0.75rem;
+}
 
-    button.remove-btn {
-      background: #ef4444;
-      color: #fff;
-      font-weight: 500;
-      font-size: 0.85rem;
-      padding: 0.5rem;
-      border-radius: 8px;
-      width: auto;
-      margin-left: 0.5rem;
-      cursor: pointer;
-    }
+/* ===== WORKOUT LIST ===== */
+.workout-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #111827;
+  border: 1px solid #1f2937;
+  border-radius: 12px;
+  padding: 0.75rem;
+  margin-bottom: 0.5rem;
+}
 
-    /* ===== FORM INPUTS ===== */
-    input, select {
-      width: 100%;
-      padding: 0.75rem;
-      border-radius: 10px;
-      border: 1px solid #1f2937;
-      background: #020617;
-      color: #e5e7eb;
-      font-size: 16px;
-      margin-bottom: 0.75rem;
-    }
+.workout-item span {
+  font-weight: 500;
+  color: #e5e7eb;
+}
 
-    /* ===== WORKOUT LIST ===== */
-    .workout-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: #111827;
-      border: 1px solid #1f2937;
-      border-radius: 12px;
-      padding: 0.75rem;
-      margin-bottom: 0.5rem;
-    }
+.remove-btn {
+  background: transparent;
+  color: #ef4444;
+  border: none;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  margin-left: 0.5rem;
+}
 
-    .workout-item span {
-      font-weight: 500;
-      color: #e5e7eb;
-    }
+/* ===== WEEKLY CALENDAR ===== */
+.weekly-calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 6px;
+  margin-top: 1rem;
+}
 
-    /* ===== CALENDAR ===== */
-    .calendar {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      gap: 4px;
-      margin-top: 1rem;
-    }
+.day-box {
+  background: #020617;
+  border: 1px solid #1f2937;
+  border-radius: 10px;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  color: #9ca3af;
+  position: relative;
+  cursor: default;
+}
 
-    .calendar-day {
-      background: #020617;
-      border: 1px solid #1f2937;
-      border-radius: 8px;
-      height: 60px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-size: 0.8rem;
-      color: #9ca3af;
-      cursor: default;
-    }
+.day-box.has-workout {
+  background: #1f2937;
+  color: #38bdf8;
+  font-weight: 600;
+}
 
-    .calendar-day.has-workout {
-      background: #1f2937;
-      color: #38bdf8;
-      font-weight: 600;
-    }
+/* minimal remove button on day */
+.day-box .remove-day-btn {
+  position: absolute;
+  top: 2px;
+  right: 4px;
+  font-size: 0.8rem;
+  background: transparent;
+  border: none;
+  color: #ef4444;
+  cursor: pointer;
+  font-weight: 600;
+}
 
-    .planner-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 1rem;
-    }
+/* ===== HEADER ===== */
+.planner-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
 
-    .planner-header h3 {
-      margin: 0;
-      color: #e5e7eb;
-    }
+.planner-header h3 {
+  margin: 0;
+  color: #e5e7eb;
+}
 
-    .planner-link {
-      background: #38bdf8;
-      color: #020617;
-      font-size: 0.85rem;
-      padding: 0.5rem 0.75rem;
-    }
-  </style>
+</style>
 </head>
-
 <body>
 
-  <!-- TOP NAV -->
-  <div class="top-nav">Ascend</div>
+<div class="top-nav">Ascend</div>
 
-  <div class="page">
-    <div class="container">
+<div class="page">
+  <div class="container">
 
-      <!-- ADD WORKOUT CARD -->
-      <div class="card">
-        <h3>Add Workout</h3>
-        <input type="text" id="plannerWorkoutName" placeholder="Workout Name" />
-        <input type="date" id="plannerWorkoutDate" />
-        <button id="addPlannerWorkoutBtn">Add Workout</button>
-      </div>
-
-      <!-- WORKOUTS LIST -->
-      <div class="card">
-        <div class="planner-header">
-          <h3>Scheduled Workouts</h3>
-        </div>
-        <div id="workoutList">
-          <p class="planner-empty">No workouts planned for this month</p>
-        </div>
-      </div>
-
-      <!-- CALENDAR -->
-      <div class="card">
-        <h3>Calendar</h3>
-        <div class="calendar" id="calendar"></div>
-      </div>
-
+    <!-- ADD WORKOUT -->
+    <div class="card">
+      <h3>Add Workout</h3>
+      <input type="text" id="plannerWorkoutName" placeholder="Workout Name" />
+      <input type="date" id="plannerWorkoutDate" />
+      <button id="addPlannerWorkoutBtn">Add Workout</button>
     </div>
+
+    <!-- WORKOUT LIST -->
+    <div class="card">
+      <div class="planner-header">
+        <h3>Scheduled Workouts</h3>
+      </div>
+      <div id="workoutList">
+        <p class="planner-empty">No workouts planned this week</p>
+      </div>
+    </div>
+
+    <!-- WEEKLY CALENDAR -->
+    <div class="card">
+      <h3>This Week</h3>
+      <div class="weekly-calendar" id="weeklyCalendar"></div>
+    </div>
+
   </div>
+</div>
 
-  <!-- BOTTOM NAV -->
-  <nav class="bottom-nav">
-    <button data-page="dashboard" onclick="location.href='dashboard.html'">
-      <span class="icon"><img src="/icons/home.png" class="nav-icon"></span>
-      <span class="label">Home</span>
-    </button>
-    <button data-page="view" onclick="location.href='view.html'">
-      <span class="icon"><img src="/icons/workout.png" class="nav-icon"></span>
-      <span class="label">Workouts</span>
-    </button>
-    <button data-page="workout" class="create-btn" onclick="location.href='workout.html'">
-      <span class="icon">＋</span>
-    </button>
-    <button data-page="stats" disabled>
-      <span class="icon"><img src="/icons/analytics.png" class="nav-icon"></span>
-      <span class="label">Analytics</span>
-    </button>
-    <button data-page="profile" disabled>
-      <span class="icon"><img src="/icons/profile.png" class="nav-icon"></span>
-      <span class="label">Profile</span>
-    </button>
-  </nav>
+<!-- BOTTOM NAV -->
+<nav class="bottom-nav">
+  <button data-page="dashboard" onclick="location.href='dashboard.html'">
+    <span class="icon"><img src="/icons/home.png" class="nav-icon"></span>
+    <span class="label">Home</span>
+  </button>
+  <button data-page="view" onclick="location.href='view.html'">
+    <span class="icon"><img src="/icons/workout.png" class="nav-icon"></span>
+    <span class="label">Workouts</span>
+  </button>
+  <button data-page="workout" class="create-btn" onclick="location.href='workout.html'">
+    <span class="icon">＋</span>
+  </button>
+  <button data-page="stats" disabled>
+    <span class="icon"><img src="/icons/analytics.png" class="nav-icon"></span>
+    <span class="label">Analytics</span>
+  </button>
+  <button data-page="profile" disabled>
+    <span class="icon"><img src="/icons/profile.png" class="nav-icon"></span>
+    <span class="label">Profile</span>
+  </button>
+</nav>
 
-  <script>
-    // ===== Planner Data =====
-    const workoutListEl = document.getElementById('workoutList');
-    const calendarEl = document.getElementById('calendar');
+<script>
+const workoutListEl = document.getElementById('workoutList');
+const weeklyCalendarEl = document.getElementById('weeklyCalendar');
 
-    let plannerData = JSON.parse(localStorage.getItem('planner')) || {};
+let plannerData = JSON.parse(localStorage.getItem('planner')) || {};
 
-    function renderWorkouts() {
-      workoutListEl.innerHTML = '';
-      const workouts = Object.entries(plannerData).sort((a,b) => new Date(a[0]) - new Date(b[0]));
-      if(workouts.length === 0){
-        workoutListEl.innerHTML = `<p class="planner-empty">No workouts planned for this month</p>`;
-        return;
-      }
-      workouts.forEach(([date, workout]) => {
-        const div = document.createElement('div');
-        div.className = 'workout-item';
-        div.innerHTML = `<span>${workout.name}</span>
-                         <button class="remove-btn" data-date="${date}">Remove</button>`;
-        workoutListEl.appendChild(div);
+// ===== Render Workouts =====
+function renderWorkouts() {
+  workoutListEl.innerHTML = '';
+  const today = new Date();
+  const thisWeek = [];
+  for(let i=0;i<7;i++){
+    const day = new Date();
+    day.setDate(today.getDate()+i);
+    thisWeek.push(day.toISOString().split('T')[0]);
+  }
+
+  const weekWorkouts = thisWeek.map(date => ({ date, workout: plannerData[date] })).filter(d => d.workout);
+
+  if(weekWorkouts.length === 0){
+    workoutListEl.innerHTML = '<p class="planner-empty">No workouts planned this week</p>';
+    return;
+  }
+
+  weekWorkouts.forEach(item => {
+    const div = document.createElement('div');
+    div.className = 'workout-item';
+    div.textContent = `${item.workout.name} (${item.date})`;
+    workoutListEl.appendChild(div);
+  });
+}
+
+// ===== Render Weekly Calendar =====
+function renderCalendar() {
+  weeklyCalendarEl.innerHTML = '';
+  const today = new Date();
+  for(let i=0;i<7;i++){
+    const day = new Date();
+    day.setDate(today.getDate()+i);
+    const dayISO = day.toISOString().split('T')[0];
+
+    const div = document.createElement('div');
+    div.className = 'day-box';
+    div.textContent = day.getDate();
+
+    if(plannerData[dayISO]){
+      div.classList.add('has-workout');
+      const removeBtn = document.createElement('button');
+      removeBtn.textContent = '×';
+      removeBtn.className = 'remove-day-btn';
+      removeBtn.addEventListener('click', () => {
+        delete plannerData[dayISO];
+        localStorage.setItem('planner', JSON.stringify(plannerData));
+        renderWorkouts();
+        renderCalendar();
       });
-
-      // remove button
-      document.querySelectorAll('.remove-btn').forEach(btn => {
-        btn.addEventListener('click', () => {
-          const date = btn.dataset.date;
-          delete plannerData[date];
-          localStorage.setItem('planner', JSON.stringify(plannerData));
-          renderWorkouts();
-          renderCalendar();
-        });
-      });
+      div.appendChild(removeBtn);
     }
 
-    function renderCalendar() {
-      const today = new Date();
-      const year = today.getFullYear();
-      const month = today.getMonth();
+    weeklyCalendarEl.appendChild(div);
+  }
+}
 
-      calendarEl.innerHTML = '';
+// ===== Add Workout =====
+document.getElementById('addPlannerWorkoutBtn').addEventListener('click', () => {
+  const name = document.getElementById('plannerWorkoutName').value;
+  const date = document.getElementById('plannerWorkoutDate').value;
+  if(!name || !date) return alert('Enter workout name and date');
 
-      const firstDay = new Date(year, month, 1);
-      const lastDay = new Date(year, month + 1, 0);
-      for(let i=1;i<=lastDay.getDate();i++){
-        const dayDate = new Date(year, month, i).toISOString().split('T')[0];
-        const div = document.createElement('div');
-        div.className = 'calendar-day';
-        div.textContent = i;
-        if(plannerData[dayDate]){
-          div.classList.add('has-workout');
-          div.title = plannerData[dayDate].name;
-        }
-        calendarEl.appendChild(div);
-      }
-    }
+  plannerData[date] = { name };
+  localStorage.setItem('planner', JSON.stringify(plannerData));
 
-    // ===== ADD WORKOUT =====
-    document.getElementById('addPlannerWorkoutBtn').addEventListener('click', () => {
-      const nameInput = document.getElementById('plannerWorkoutName');
-      const dateInput = document.getElementById('plannerWorkoutDate');
+  document.getElementById('plannerWorkoutName').value = '';
+  document.getElementById('plannerWorkoutDate').value = '';
 
-      if(!nameInput.value || !dateInput.value) return alert('Enter name and date');
+  renderWorkouts();
+  renderCalendar();
+});
 
-      plannerData[dateInput.value] = { name: nameInput.value };
-      localStorage.setItem('planner', JSON.stringify(plannerData));
-
-      nameInput.value = '';
-      dateInput.value = '';
-
-      renderWorkouts();
-      renderCalendar();
-    });
-
-    // Initial render
-    renderWorkouts();
-    renderCalendar();
-  </script>
+// ===== Initial render =====
+renderWorkouts();
+renderCalendar();
+</script>
 
 </body>
 </html>
